# MotifCL

./: .clang-format  .clang-tidy  .cplignore  .editorconfig  .gitattributes  .gitignore  BUILD_REPORT.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  motifcl.cmd  pyproject.toml
.github/workflows/: ci.yml
baselines/: ellesmere.json
benchmarks/: CMakeLists.txt  bench_attention.cpp  bench_kquant_m1.cpp  bench_lora.cpp  bench_matmul.cpp  bench_matmul_gpt_shapes.cpp  bench_modern_transformer.cpp  bench_softmax.cpp
cmake/: CompilerOptions.cmake  MotifCLConfig.cmake.in
docs/: ARCHITECTURE.md  GEMMA_COMPAT.md  HF_COMPAT.md  IMPLEMENTATION_PLAN.md  MODERN_TRANSFORMER.md  OLLAMA_COMPAT_SERVER.md  OPENCL_TROUBLESHOOTING.md  PERFORMANCE.md  PYTHON_API.md  ROADMAP.md  SPEC.md  TRAINING.md
examples/cpp/: 01_device_info.cpp  02_matmul.cpp  03_mlp_train.cpp  04_bigram_train.cpp  05_tiny_transformer.cpp  06_motif_lora.cpp  07_long_train_checkpoint.cpp  08_shakespeare_10m_train.cpp  CMakeLists.txt  example_utils.hpp
include/motifcl/: gguf.hpp  motifcl.hpp  serialization.hpp
include/motifcl/autograd/: backward.hpp  graph.hpp  node.hpp  tape.hpp  variable.hpp
include/motifcl/core/: device.hpp  dtype.hpp  error.hpp  logging.hpp  shape.hpp  status.hpp  types.hpp
include/motifcl/motif/: motif_block.hpp  motif_linear.hpp  motif_lora.hpp  router.hpp  sarc_residual.hpp
include/motifcl/nn/: attention.hpp  embedding.hpp  gemma.hpp  hf_compat.hpp  linear.hpp  mlp.hpp  module.hpp  parameter.hpp  rmsnorm.hpp  sequential.hpp  transformer.hpp
include/motifcl/ops/: activation.hpp  attention.hpp  basic_ops.hpp  fp16.hpp  fused_transformer.hpp  indexing.hpp  loss.hpp  matmul.hpp  norm.hpp  optim.hpp  quant.hpp  reduce.hpp
include/motifcl/runtime/: backend.hpp  buffer.hpp  command_buffer.hpp  event.hpp  kernel.hpp  opencl_context.hpp  profiler.hpp  program.hpp
include/motifcl/tensor/: allocator.hpp  storage.hpp  tensor.hpp  view.hpp
include/motifcl/train/: adam.hpp  dataloader.hpp  mixed_precision.hpp  optimizer.hpp  scheduler.hpp  sgd.hpp  static_train_step.hpp  trainer.hpp  training_utils.hpp
kernels/: activation.cl  attention.cl  basic.cl  embedding.cl  fp16.cl  loss.cl  matmul.cl  motif.cl  norm.cl  optim.cl  quant.cl  reduce.cl
python/: CMakeLists.txt  bindings.cpp
python/motifcl/: __init__.py  __init__.pyi  functional.py  nn.py  optim.py  serialization.py
src/: gguf.cpp  serialization.cpp
src/autograd/: backward.cpp  graph.cpp  tape.cpp
src/core/: error.cpp  logging.cpp  shape.cpp  types.cpp
src/motif/: motif_block.cpp  motif_linear.cpp  motif_lora.cpp  router.cpp  sarc_residual.cpp
src/nn/: attention.cpp  embedding.cpp  gemma.cpp  hf_compat.cpp  linear.cpp  module.cpp  rmsnorm.cpp  transformer.cpp
src/ops/: activation.cpp  attention.cpp  basic_ops.cpp  fp16.cpp  fused_transformer.cpp  indexing.cpp  loss.cpp  matmul.cpp  norm.cpp  optim.cpp  quant.cpp  reduce.cpp
src/runtime/: backend.cpp  buffer.cpp  command_buffer.cpp  event.cpp  kernel.cpp  opencl_context.cpp  profiler.cpp  program.cpp
src/tensor/: allocator.cpp  storage.cpp  tensor.cpp
src/train/: adam.cpp  mixed_precision.cpp  sgd.cpp  static_train_step.cpp  trainer.cpp  training_utils.cpp
tests/: CMakeLists.txt  test_adam.cpp  test_attention.cpp  test_backend_lifetime.cpp  test_backward.cpp  test_buffer.cpp  test_cross_entropy.cpp  test_embedding.cpp  test_fused_transformer.cpp  test_gemma_compat.cpp  test_gguf.cpp  test_gpt.cpp  test_graph_capture.cpp  test_hf_modern_compat.cpp  test_layernorm.cpp  test_matmul.cpp  test_modern_transformer.cpp  test_production_stack.cpp  test_quant.cpp  test_rmsnorm.cpp  test_shape.cpp  test_softmax.cpp  test_tensor.cpp  test_transformer.cpp  test_utils.hpp
tests/consumer/: CMakeLists.txt  main.cpp
tests/python/: test_python_api.py
tools/: CMakeLists.txt  compare_cpu_gpu.cpp  dump_opencl_info.cpp  generate_transformer.cpp  hf_integration_smoke.py  kernel_tuner.cpp  motifcl_cli.py  motifcl_ollama_server.py  parity_harness.py  perf_regression.py  release_check.py  run_clang_tidy_smoke.py  run_fast_shakespeare_10m.ps1  warm_decode_bench.cpp
