[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "motifcl"
version = "1.0.0"
description = "C++17/OpenCL neural compute framework for legacy AMD GPUs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "MotifCL contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.scikit-build]
cmake.version = ">=3.20"
build-dir = "build/{wheel_tag}"
wheel.packages = ["python/motifcl"]

[tool.scikit-build.cmake.define]
MOTIFCL_BUILD_PYTHON = "ON"
MOTIFCL_BUILD_TESTS = "OFF"
MOTIFCL_BUILD_EXAMPLES = "OFF"
MOTIFCL_BUILD_TOOLS = "OFF"
MOTIFCL_BUILD_BENCHMARKS = "OFF"
